# parapet

./: .dockerignore  .gitignore  .llvm-cov.toml  Cargo.toml  Dockerfile  ESCALATION_DEMO.sh  Makefile.coverage  QUICKSTART.md  README.md  SECURITY.md  START_CLEAN.sh  START_FULL_STACK.sh  TEST_ESCALATIONS_NO_UI.sh  TEST_WITH_YOUR_WALLET.sh  VULNERABILITY_REPORT.md  WORKING_ESCALATION_DEMO.sh  audit.toml  config.toml  consent-policies.toml.example  coverage.sh  deny.toml  docker-compose.unified.yml  parapet  parapet-sbom.cdx.json  test-escalation-complete.sh  test-escalation-flow.sh  test-escalations.sh  test-send-sol.sh
.cargo/: audit.toml
api/: .gitignore  Cargo.toml  README.md  config.example.toml  schema.sql
api-core/: Cargo.toml  README.md  config.example.toml
api-core/scripts/: generate-api-key.sh
api-core/src/: auth.rs  lib.rs  main.rs  state.rs  tx_builder.rs  types.rs
api-core/src/middleware/: mod.rs  rate_limit.rs
api-core/src/routes/: activity.rs  activity_websocket.rs  auth.rs  escalations.rs  mcp.rs  mcp_tools.rs  mod.rs  rules.rs  websocket.rs
api-core/tests/: e2e_api_test.rs  escalation_flow_test.rs  integration_test.rs.disabled  redis_integration_test.rs  websocket_test.rs
api-core/tests/common/: mod.rs
api-platform/: Cargo.toml  README.md  platform-config.example.toml
api-platform/src/: auth.rs  config.rs  learning.rs  main.rs  payments.rs  push.rs  session.rs  state.rs  wallet_scan.rs  websocket.rs
api-platform/tests/common/: mod.rs
api/scripts/: generate-api-key.sh
api/src/: auth.rs  lib.rs  main.rs  state.rs  tx_builder.rs
api/src/middleware/: rate_limit.rs
api/src/routes/: activity.rs  auth.rs  escalations.rs  mcp.rs  mcp_tools.rs  mod.rs  rules.rs  websocket.rs
api/tests/: e2e_api_test.rs  escalation_flow_test.rs  integration_test.rs  redis_integration_test.rs  websocket_test.rs
api/tests/common/: mod.rs
core/: Cargo.toml  README.md
core/benches/: flowbits_performance.rs
core/examples/: instruction_padding_detection.rs  wasm_analyzer_template.rs.template
core/src/: error.rs  lib.rs  mod.rs
core/src/enrichment/: README.md  helius.rs  jupiter.rs  mod.rs  ottersec.rs  rugcheck.rs
core/src/program_analysis/: README.md  ai_analyzer.rs  cache.rs  disassembler.rs  feed_poller.rs  fetcher.rs  mod.rs  semantic.rs  types.rs
core/src/rules/: alt_cache.rs  alt_resolver.rs  analyzer.rs  analyzer_config.rs  dynamic.rs  engine.rs  feed_updater.rs  mod.rs  performance.rs  tests.rs  tests_analyzer.rs  tests_types.rs  types.rs  wasm_analyzer.rs  wasm_config.rs
core/src/rules/analyzers/: feed_updater.rs  inner_instruction.rs  mod.rs  test_analyzer_fields.rs  tests.rs
core/src/rules/analyzers/core/: README.md  authority-change.json  basic.rs  canonical_tx.rs  core_security.rs  inner_instruction.rs  instruction_data.rs  instruction_padding.rs  mod.rs  program_analysis.rs  program_complexity.rs  system_program.rs  tests_basic.rs  tests_security.rs  tests_system.rs  tests_token.rs  token_instructions.rs  transaction_logs.rs
core/src/rules/analyzers/simulation/: README.md  balance.rs  compute.rs  cpi.rs  failure.rs  logs.rs  mod.rs  tests.rs  token_balance.rs
core/src/rules/flowbits/: README.md  mod.rs  state.rs  tests.rs
core/src/rules/flowstate/: README.md  mod.rs  state.rs  tests.rs
core/tests/: integration.rs  proptest_rules.rs  wasm_test.rs
core/tests/integration/: mod.rs  third_party_analyzers.rs  wasm_integration.rs
core/tests/wasm_mock/: Cargo.toml
core/tests/wasm_mock/src/: lib.rs
mcp/: Cargo.toml  README.md  example-config.json  install.sh  release.sh  sol-shield-mcp-http-client.sh
mcp/resources/: examples.md  guide.md  risk-scoring.md
mcp/src/: helius_tools.rs  lib.rs  main.rs  rugcheck_tools.rs  tools.rs
reference/gateway/: Cargo.toml  README.md
reference/gateway/src/: auth.rs  main.rs  postgres_sink.rs
rpc-proxy/: .env.backup  .env.devnet  Cargo.toml  README.md  config.toml.example  test-agent-integration.sh
rpc-proxy/config/: README.md  custom-safe-programs-example.json
rpc-proxy/proto/: securecheck.proto
rpc-proxy/rules/: README.md
rpc-proxy/rules/examples/: invalid-example.json
rpc-proxy/rules/presets/: default-protection.json
rpc-proxy/src/: activity.rs  auth.rs  cache.rs  config.rs  main.rs  rpc_handler.rs  server.rs  types.rs  upstream.rs
rpc-proxy/src/auth/: providers.rs  tests.rs
rpc-proxy/src/escalations/: decoder.rs  mod.rs  types.rs
rpc-proxy/src/output/: event.rs  formatter.rs  manager.rs  mod.rs  sink.rs  tests.rs
rpc-proxy/src/output/formatters/: form1099da.rs  iso20022.rs  mod.rs
rpc-proxy/src/output/sinks/: http.rs
rpc-proxy/tests/: auth_test.rs  cache_test.rs  dynamic_rules_test.rs  e2e_proxy_test.rs  output_integration.rs  test_flowstate_integration.rs  upstream_test.rs  usage_tracking_test.rs
rpc-proxy/tests/common/: mod.rs
rpc-proxy/tests/fixtures/rules/examples/: missing-field-examples.json  test-balanced.json
rpc-proxy/tests/fixtures/rules/policies/allowlists/: delegate-allowlist.json
rpc-proxy/tests/fixtures/rules/policies/blocklists/: program-blacklist.json
rpc-proxy/tests/fixtures/rules/presets/: comprehensive-protection.json  enterprise-cross-wallet.json
scanner/: .gitignore  Cargo.toml  README.md  analyze-program.sh  config.toml.example  scan-wallet.sh  update-safe-lists.sh
scanner/src/: classifier.rs  detector.rs  history.rs  lib.rs  report.rs  state.rs
scanner/tests/: integration_test.rs  suspicious_programs_test.rs
tools/flowbits-perf/: Cargo.toml  README.md
tools/flowbits-perf/benches/: flowbits_perf.rs
tools/flowstate-perf/: Cargo.toml  README.md
tools/flowstate-perf/benches/: flowstate_perf.rs
tools/rpc-perf/: Cargo.toml  README.md
tools/rpc-perf/fixtures/: README.md  all-200-rules.json  all-rules-complete.json  all-rules-fixed.json  all-rules.json  mix-rules.json  realistic-rules.json  stress-test-rules.json
tools/rpc-perf/src/: harness.rs  lib.rs  main.rs
tools/rpc-perf/tests/: smoke.rs
upstream/: Cargo.toml
upstream/src/: circuit.rs  client.rs  config.rs  failover.rs  json.rs  lib.rs  strategies.rs
(+1198 files in other folders)
