# Solana 4.x (MSRV 1.85+): `solana-sdk` is stable; RPC stack uses `solana-client` beta and
# `solana-transaction-status` / `solana-account-decoder` RC lines that match that client release.
# Advisory ignores and rationale: `audit.toml` and `.github/workflows/dependency-security.yml`.

[workspace]
resolver = "2"
members = [
    "core",
    "upstream",
    "rpc-proxy",
    "scanner",
    "api",
    "mcp",
    "tools/rpc-perf",
    "tools/flowstate-perf",
]
exclude = [
    "core/tests/wasm_mock",
]

[workspace.dependencies.blake3]
version = "1.5.4"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["SecureCheck Team"]
license = "MIT"
repository = "https://github.com/securecheckio/parapet"

[workspace.dependencies]
# Core dependencies shared across workspace
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Solana 4.x — keep `solana-client`, `solana-transaction-status`, and `solana-account-decoder`
# on the same release line (here beta.7) so `*-client-types` versions resolve uniquely.
solana-sdk = "4.0.1"
solana-client = "4.0.0-beta.7"
solana-transaction-status = "4.0.0-beta.7"
solana-account-decoder = "4.0.0-beta.7"
solana-address-lookup-table-interface = "3.1"
solana-system-interface = "3.2"
solana-commitment-config = "3.1"
solana-sdk-ids = "3.1"

# Async/HTTP
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "compression-full"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Misc
bs58 = "0.5"
base64 = "0.21"
bincode = "1.3"
spl-token-interface = "2.0"
solana-program-option = "3.1"

[profile.release]
# Strip debug symbols for smaller binaries
strip = true
# Optimize for size while maintaining performance
opt-level = 3
# Enable Link Time Optimization for better optimization across crates
lto = true
# Reduce number of codegen units for better optimization (slower compile, smaller binary)
codegen-units = 1
# Panic strategy: abort instead of unwind (smaller binary, faster panics)
panic = "abort"
