[package]
name = "parapet-api-core"
version = "0.1.0"
edition = "2021"
authors = ["SecureCheck Team"]
description = "Core API Library and Binary for Parapet - Rule Management, Escalation API, and MCP Server"
license = "MIT"

[lib]
name = "parapet_api_core"
path = "src/lib.rs"

[[bin]]
name = "parapet-api-core"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Solana
solana-sdk = "2.3"
ed25519-dalek = "2.1"
spl-token = "8.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
base64 = "0.22"
bincode = "1.3"
toml = "0.8"

# Redis (for dynamic rules and escalations)
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }

# Utility
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

# Internal dependencies
parapet-core = { path = "../core", features = ["helius", "ottersec", "jupiter", "rugcheck", "program-analysis"] }
parapet-scanner = { path = "../scanner" }
parapet-mcp-server = { path = "../mcp" }

# Solana RPC client
solana-client = "2.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
testcontainers = "0.23"
tower = { version = "0.5", features = ["util"] }
chrono = "0.4"
tokio-tungstenite = "0.20"
futures = "0.3"
