[package]
name = "parapet-platform"
version = "0.1.0"
edition = "2021"
authors = ["SecureCheck Team"]
description = "Parapet Platform - Full-featured API with multi-user dashboard"
license = "MIT"

[[bin]]
name = "parapet-platform"
path = "src/main.rs"

[dependencies]
# Core API library
parapet-api-core = { path = "../api-core" }
# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.9", features = ["cookie"] }
futures = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"] }

# Cache (must match api-core for ConnectionManager compatibility)
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Utility
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
rand = "0.8"

# Solana wallet verification & payments
bs58 = "0.5"
sha2 = "0.10"
ed25519-dalek = "2.1"
solana-sdk = "2.3.0"
solana-client = "2.3.0"
solana-transaction-status = "2.3.0"
urlencoding = "2.1"

# Push notifications
web-push = "0.9"
base64 = "0.22"

# Parapet internal dependencies
parapet-scanner = { path = "../scanner" }
parapet-core = { path = "../core" }
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[profile.release]
# Strip debug symbols for smaller binaries
strip = true
# Optimize for size while maintaining performance
opt-level = 3
# Enable Link Time Optimization for better optimization across crates
lto = true
# Reduce number of codegen units for better optimization (slower compile, smaller binary)
codegen-units = 1
# Panic strategy: abort instead of unwind (smaller binary, faster panics)
panic = "abort"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
testcontainers = "0.23"
