[package]
name = "parapet-api"
version = "0.1.0"
edition = "2021"
authors = ["SecureCheck Team"]
description = "Rule Management and Escalation API for Sol Shield"
license = "MIT"

[[bin]]
name = "parapet-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Solana
solana-sdk = "2.3"
ed25519-dalek = "2.1"
spl-token = "8.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
base64 = "0.22"
bincode = "1.3"

# Redis (for dynamic rules and escalations)
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }

# Utility
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

# Internal dependencies
parapet-core = { path = "../core", features = ["helius", "ottersec", "jupiter", "rugcheck", "program-analysis"] }
parapet-scanner = { path = "../scanner" }

# Solana RPC client
solana-client = "2.3"
