[package]
name = "parapet-rpc-proxy"
version = "0.1.0"
edition = "2021"
authors = ["SecureCheck Team"]
description = "Authenticated RPC proxy for Solana with built-in transaction security"
license = "MIT"
repository = "https://github.com/securecheckio/parapet"

[lib]
name = "parapet_rpc_proxy"
crate-type = ["rlib"]

[[bin]]
name = "parapet-rpc-proxy"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
rand = "0.8"
# Parapet Core (our standalone security analysis engine with all analyzers)
parapet-core = { path = "../core", features = ["all-analyzers", "program-analysis"] }

# Utilities
tokio-util = "0.7"
# Web server
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Solana
solana-sdk = "2.3"
solana-transaction-status = "2.3.0"
bs58 = "0.5"
bincode = "1.3"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for upstream RPC
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp"] }

# Utility
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[features]
default = []
# Declared so `cfg(feature = "...")` in this crate is recognized by Rust 1.80+ `check-cfg`.
example_notifiers = []
jupiter = []
token-mint = []
wasm-analyzers = []

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.6"
solana-system-interface = "1.0"
