[package]
name = "parapet-scanner"
version = "0.1.0"
edition = "2021"
authors = ["SecureCheck Team"]
license = "MIT"

[dependencies]
# Reuse parapet-core for analyzers and rules with all third-party analyzers enabled
parapet-core = { path = "../core", features = ["helius", "ottersec", "jupiter", "rugcheck", "program-analysis"] }
parapet-upstream = { path = "../upstream" }

# RPC client
solana-client = { workspace = true }
# RpcClient 4.0.0-beta still targets `solana-transaction` 3.x for `SerializableTransaction`;
# bridge signed `solana_sdk` 4.x transactions through bincode for submit helpers.
solana_transaction_rpc = { package = "solana-transaction", version = "3.1.0" }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-commitment-config = { workspace = true }
spl-token-interface = { workspace = true }
solana-program-option = { workspace = true }

# Utilities (reuse workspace versions)
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
bs58.workspace = true

[[bin]]
name = "wallet-scanner"
path = "src/bin/wallet-scanner.rs"

[[bin]]
name = "program-analyzer"
path = "src/bin/program-analyzer.rs"

[[bin]]
name = "update-safe-lists"
path = "src/bin/update-safe-lists.rs"

[[bin]]
name = "tx-check"
path = "src/bin/tx-check.rs"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.owo-colors]
version = "4.1"
features = ["supports-colors"]

[dependencies.env_logger]
workspace = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[features]
default = ["program-analysis", "reqwest"]
program-analysis = ["parapet-core/program-analysis"]
ai-analysis = ["parapet-core/ai-analysis"]
reqwest = []
debug-fields = []

[dev-dependencies]
env_logger = { workspace = true }
wiremock = "0.6"
