[package]
name = "flowstate-perf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Criterion benchmarks for parapet_core flowstate (FlowStateManager)."

[dependencies]
parapet-core = { path = "../../core" }
solana-sdk = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "flowstate_perf"
harness = false
